[metadata]
name = netsnmp-wrap
version = 0.1
author = MFalaqIqbal
author_email = ''
description = ''
long_description = file: README.md
long_description_content_type = text/markdown
url = 'https://github.com/MFalaqIqbal/netsnmp-wrap'
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False